@@ -4,6 +4,7 @@ A multiagnet system simulation for my senior project
 ### How to run?
 - Start the server from the massim_2022 repository (https://github.com/berfincicek/massim_2022)
 - Run the main class on this repository
+- For editing the "main"s configurations use "--add-opens=java.base/java.io=ALL-UNNAMED" for VM options
 - Can see the map and agents from localhost:8000
 
 ### Known Bugs
